добавил ручку для создания временной ссылки на файл на диске Яндекс, потому что там нет прямых ссылок для не публичных
